--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>Automated Water Meter System</h1>
+    <h1>Automated Water Meter Systems</h1>
     <p>
       Monitor your water usage in real-time, track your bill, and manage your consumption efficiently with our Automated water meter system.
     </p>
