--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #1b8694, #1b8694);
+      background: url('images/Water.jpg') no-repeat center center fixed;
+      background-size: cover;
       height: 100vh;
       display: flex;
       justify-content: center;
