--- a/dashboard.html
+++ b/dashboard.html
@@ -55,7 +55,7 @@
     </p>
     <canvas id="usageChart" width="400" height="200" style="margin-top:20px;"></canvas>
     <div style="margin-top: 20px;">
-      <button onclick="fakePay()">Pay Bill</button>
+      <button onclick="payBill()">Pay Bill</button>
       <button onclick="downloadPDF()">Download PDF</button>
       <button onclick="downloadCSV()">Export CSV</button>
     </div>
