--- a/dashboard.html
+++ b/dashboard.html
@@ -13,32 +13,6 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Local Config -->
   <script src="firebase-config.js"></script>
-
-  <!-- Notification Styling -->
-  <style>
-    .leak-notification {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #fff3cd;
-        color: #856404;
-        border: 1px solid #ffeeba;
-        border-radius: 8px;
-        padding: 15px 20px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        z-index: 1000;
-        max-width: 350px;
-        align-items: center; /* Use flexbox alignment */
-        gap: 15px;
-    }
-    .leak-notification-icon { font-size: 24px; }
-    .leak-notification-close {
-        position: absolute;
-        top: 5px; right: 10px;
-        font-size: 20px; cursor: pointer; color: #856404;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -55,11 +29,14 @@
     </p>
     <canvas id="usageChart" width="400" height="200" style="margin-top:20px;"></canvas>
     <div style="margin-top: 20px;">
+      <button id="dailyButton">Show Daily Usage</button>
+      <button id="weeklyButton">Show Weekly Usage</button>
+      <button id="yearlyButton">Show Yearly Usage</button>
       <button onclick="fakePay()">Pay Bill</button>
       <button onclick="downloadPDF()">Download PDF</button>
       <button onclick="downloadCSV()">Export CSV</button>
     </div>
-    
+
     <!-- Leak Notification Popup -->
     <div id="leak-notification" class="leak-notification">
         <span class="leak-notification-icon">⚠️</span>
@@ -69,7 +46,6 @@
         </div>
         <span class="leak-notification-close" onclick="hideLeakNotification()">×</span>
     </div>
-
   </main>
   <!-- Main Logic Scripts -->
   <script src="dashboard.js"></script>
