--- a/dashboard.html
+++ b/dashboard.html
@@ -22,17 +22,20 @@
   <main class="dashboard">
     <p>Welcome, <span id="userEmail">-</span></p>
     <p>Current Flow Rate: <span id="flowRate">0.00</span> L/m</p>
-    <p>Total Water Used: <span id="liters">0.00</span> L</p>
+    <p>Usage this Period: <span id="liters">0.00</span> L</p>
+    <p>Total Usage: <span id="totalLiters">0.00</span> L</p> 
     <p>Estimated Bill: RM <span id="price">0.00</span></p>
     <p style="font-size: 14px; color: #1b8694;">
       (First 20m³ × RM0.57, next 15m³ × RM1.03, rest × RM2.00)
     </p>
     <canvas id="usageChart" width="400" height="200" style="margin-top:20px;"></canvas>
     <div style="margin-top: 20px;">
-      <button id="dailyButton">Show Daily Usage</button>
-      <button id="weeklyButton">Show Weekly Usage</button>
-      <button id="yearlyButton">Show Yearly Usage</button>
-      <button onclick="fakePay()">Pay Bill</button>
+      <!-- MODIFIED BUTTONS -->
+      <button id="dailyButton">Day</button>
+      <button id="weeklyButton">Week</button>
+      <button id="monthlyButton">Month</button>
+      <button id="yearlyButton">Year</button>
+      <button onclick="payBill()">Pay Bill</button>
       <button onclick="downloadPDF()">Download PDF</button>
       <button onclick="downloadCSV()">Export CSV</button>
     </div>
