--- a/forgot-password.html
+++ b/forgot-password.html
@@ -16,6 +16,8 @@
       <a href="login.html">Back to Login</a>
     </div>
   </div>
+
+  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
   <script src="firebase-config.js"></script>
