--- a/register.html
+++ b/register.html
@@ -6,14 +6,28 @@
   <title>Register - Smart Water Meter</title>
   <style>
     body {
-      background: linear-gradient(to bottom right, #e0f7fa, #ffffff);
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('images/register-water.jpg') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      position: relative;
+    }
+
+    /* Light overlay for readability */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.35);
+      z-index: -1;
     }
 
     .container {
@@ -44,6 +58,15 @@
     button:hover {
       background-color: #0277bd;
     }
+
+    a {
+      color: #0288d1;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -68,10 +91,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
-  <!--Config firebase -->
+  <!-- Firebase Config -->
   <script src="firebase-config.js"></script>
 
-  <!-- Register-->
+  <!-- Registration Logic -->
   <script>
     const auth = firebase.auth();
     const db = firebase.database();
